--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     </section>
     <section id="scrollspyHeading3"
-        class="Horizontal_Section d-flex justify-content-start justify-content-md-center bg-primary">
+        class="Horizontal_Section d-flex justify-content-start justify-content-md-center">
         <section class="d-flex justify-content-center  position-relative">
             <section class="Horizontal_Line"></section>
             <section class="Horizontal_Items">
